[KAIZEN-0] Legge til kafka mangager

--- a/.nais/topics/modia-soknadsstatus-hendelse-dlq.yml
+++ b/.nais/topics/modia-soknadsstatus-hendelse-dlq.yml
@@ -21,3 +21,6 @@ spec:
     - team: personoversikt
       application: soknadsstatus-hendelse-transform
       access: readwrite
+    - team: personoversikt
+      application: modia-soknadsstatus-kafka-manager
+      access: read
