--- a/.nais/topics/modia-soknadsstatus-arena-infotrygd-dlq.yml
+++ b/.nais/topics/modia-soknadsstatus-arena-infotrygd-dlq.yml
@@ -21,3 +21,6 @@ spec:
     - team: personoversikt
       application: arena-infotrygd-soknadsstatus-transform
       access: readwrite
+    - team: personoversikt
+      application: modia-soknadsstatus-kafka-manager
+      access: read
