--- a/.nais/topics/modia-soknadsstatus-arena-infotrygd-oppdatering.yml
+++ b/.nais/topics/modia-soknadsstatus-arena-infotrygd-oppdatering.yml
@@ -24,3 +24,6 @@ spec:
     - team: personoversikt
       application: arena-infotrygd-soknadsstatus-transform
       access: read
+    - team: personoversikt
+      application: modia-soknadsstatus-kafka-manager
+      access: read
