--- a/.nais/topics/modia-soknadsstatus-oppdatering-dlq.yml
+++ b/.nais/topics/modia-soknadsstatus-oppdatering-dlq.yml
@@ -21,3 +21,6 @@ spec:
     - team: personoversikt
       application: modia-soknadsstatus-api
       access: readwrite
+    - team: personoversikt
+      application: modia-soknadsstatus-kafka-manager
+      access: read
