--- a/.nais/topics/modia-soknadsstatus-oppdatering.yml
+++ b/.nais/topics/modia-soknadsstatus-oppdatering.yml
@@ -27,3 +27,6 @@ spec:
     - team: personoversikt
       application: modia-soknadsstatus-api
       access: read
+    - team: personoversikt
+      application: modia-soknadsstatus-kafka-manager
+      access: read
