--- a/apps/arena-infotrygd-soknadsstatus-transform/.nais/prod.yaml
+++ b/apps/arena-infotrygd-soknadsstatus-transform/.nais/prod.yaml
@@ -9,6 +9,17 @@ spec:
   image: {{image}}
   port: 8080
   team: personoversikt
+  replicas:
+    min: 1
+    max: 2
+    cpuThresholdPercentage: 90
+  resources:
+    requests:
+      cpu: 500m
+      memory: 2048Mi
+    limits:
+      cpu: 1000m
+      memory: 4096Mi
   liveness:
     path: /internal/isAlive
     initialDelay: 20
@@ -19,13 +30,27 @@ spec:
     path: /internal/isReady
     initialDelay: 20
     timeout: 1
+  prometheus:
+    enabled: true
+    path: /internal/metrics
+  secureLogs:
+    enabled: true
+  kafka:
+    pool: nav-prod
+  gcp:
+    sqlInstances:
+      - type: POSTGRES_14
+        databases:
+          - name: arena-infotrygd-soknadsstatus-db
   env:
+    - name: APP_NAME
+      value: "arena-infotrygd-soknadsstatus-transform"
     - name: APP_MODE
       value: "NAIS"
     - name: APP_VERSION
       value: "prod"
-    - name: KAFKA_BROKERS
-      value: "TODO"
+    - name: DB_NAME
+      value: "arena-infotrygd-soknadsstatus-db"
     - name: KAFKA_SOURCE_TOPIC
       value: "personoversikt.modia-soknadsstatus-arena-infotrygd-oppdatering"
     - name: KAFKA_TARGET_TOPIC
