--- a/apps/mq-to-kafka/.nais/prod.yaml
+++ b/apps/mq-to-kafka/.nais/prod.yaml
@@ -9,6 +9,17 @@ spec:
   image: {{image}}
   port: 8080
   team: personoversikt
+  replicas:
+    min: 1
+    max: 2
+    cpuThresholdPercentage: 90
+  resources:
+    requests:
+      cpu: 500m
+      memory: 2048Mi
+    limits:
+      cpu: 1000m
+      memory: 4096Mi
   liveness:
     path: /internal/isAlive
     initialDelay: 20
@@ -19,24 +30,47 @@ spec:
     path: /internal/isReady
     initialDelay: 20
     timeout: 1
+  prometheus:
+    enabled: true
+    path: /internal/metrics
+  secureLogs:
+    enabled: true
+  kafka:
+    pool: nav-prod
+  accessPolicy:
+    outbound:
+      external:
+        - host: "mqls03.preprod.local"
+          ports:
+            - name: MQ
+              port: 1413
+              protocol: TCP
+  filesFrom:
+    - secret: mq-tls-keystore
+      mountPath: /var/run/keystore
+  envFrom:
+    - secret: mq-to-kafka
+    - secret: mq-tls-keystore-password
   env:
+    - name: APP_NAME
+      value: "mq-to-kafka"
     - name: APP_MODE
       value: "NAIS"
     - name: APP_VERSION
       value: "prod"
-    - name: KAFKA_BROKERS
-      value: "TODO"
-    - name: KAFKA_SOURCE_TOPIC
-      value: "TODO"
     - name: KAFKA_TARGET_TOPIC
-      value: "TODO"
+      value: "personoversikt.modia-soknadsstatus-arena-infotrygd-oppdatering"
     - name: JMS_HOST
-      value: "TODO"
+      value: "mqls03.preprod.local"
     - name: JMS_PORT
-      value: "TODO"
+      value: "1413"
     - name: JMS_QUEUE_MANAGER
-      value: "TODO"
+      value: "MQLS03"
+    - name: JMS_CHANNEL
+      value: "Q1_MODIA_SS"
+    - name: JMS_QUEUE_NAME
+      value: "QA.Q1_MODIA_SS.HENDELSER_FRA_INFOTRYGD_OG_ARENA"
     - name: JMS_USERNAME
-      value: "TODO"
-    - name: JMS_PASSWORD
-      value: "TODO"
+      value: "srvmodia-ss-mq"
+    - name: JMS_KEYSTORE_PATH
+      value: "/var/run/keystore/secret"
