--- a/apps/soknadsstatus-hendelse-transform/.nais/prod.yaml
+++ b/apps/soknadsstatus-hendelse-transform/.nais/prod.yaml
@@ -9,6 +9,17 @@ spec:
   image: {{image}}
   port: 8080
   team: personoversikt
+  replicas:
+    min: 1
+    max: 2
+    cpuThresholdPercentage: 90
+  resources:
+    requests:
+      cpu: 1000m
+      memory: 4096Mi
+    limits:
+      cpu: 2000m
+      memory: 8192Mi
   liveness:
     path: /internal/isAlive
     initialDelay: 20
@@ -19,22 +30,37 @@ spec:
     path: /internal/isReady
     initialDelay: 20
     timeout: 1
+  prometheus:
+    enabled: true
+    path: /internal/metrics
+  secureLogs:
+    enabled: true
+  kafka:
+    pool: nav-prod
+    streams: true
+  gcp:
+    sqlInstances:
+      - type: POSTGRES_14
+        databases:
+          - name: soknadsstatus-hendelse-transform-db
   env:
+    - name: APP_NAME
+      value: "soknadsstatus-hendelse-transform"
     - name: APP_MODE
       value: "NAIS"
     - name: APP_VERSION
       value: "prod"
-    - name: KAFKA_BROKERS
-      value: "TODO"
+    - name: DB_NAME
+      value: "soknadsstatus-hendelse-transform-db"
     - name: KAFKA_SOURCE_TOPIC
-      value: "personoversikt.modia-soknadsstatus-fp-k9-oppdatering"
+      value: "personoversikt.modia-soknadsstatus-hendelse"
     - name: KAFKA_TARGET_TOPIC
       value: "personoversikt.modia-soknadsstatus-oppdatering"
     - name: KAFKA_DEAD_LETTER_QUEUE_TOPIC
-      value: "personoversikt.modia-soknadsstatus-fp-k9-dlq"
+      value: "personoversikt.modia-soknadsstatus-hendelse-dlq"
     - name: KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS
-      value: "8.64e+7" # One day
+      value: "60000"
     - name: KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME
-      value: "fp_k9_dlq_event_skip"
+      value: "hendelse_dlq_event_skip"
     - name: KAFKA_DEAD_LETTER_QUEUE_METRICS_GAUGE_NAME
-      value: "modia_soknadsstatus_fp_k9_dlq_gauge"
+      value: "modia_soknadsstatus_hendelse_dlq_gauge"
