--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -57,6 +57,12 @@ spec:
         - application: ida
           cluster: prod-fss
           namespace: traktor
+        - application: modiapersonoversikt-api-q1
+          cluster: dev-fss
+          namespace: personoversikt
+        - application: modiapersonoversikt-api-q0
+          cluster: dev-fss
+          namespace: personoversikt
     outbound:
       external:
         - host: graph.microsoft.com
