--- a/apps/modia-soknadsstatus-api/.nais/prod.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/prod.yaml
@@ -53,6 +53,14 @@ spec:
         extra:
           - "NAVident"
   accessPolicy:
+    inbound:
+      rules:
+        - application: ida
+          cluster: prod-fss
+          namespace: traktor
+        - application: modiapersonoversikt-api
+          cluster: prod-fss
+          namespace: personoversikt
     outbound:
       external:
         - host: graph.microsoft.com
