--- a/apps/modia-soknadsstatus-api/.nais/prod.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/prod.yaml
@@ -43,6 +43,9 @@ spec:
   gcp:
     sqlInstances:
       - type: POSTGRES_14
+        diskAutoresize: true
+        highAvailability: true
+        tier: db-custom-4-15360
         databases:
           - name: modia-soknadsstatus-api-db
   azure:
