[KAIZEN-0] Gi skrivetilgang til los-k9 til personoversikt.hendelse-oppdatering

--- a/.nais/topics/modia-soknadsstatus-hendelse.yml
+++ b/.nais/topics/modia-soknadsstatus-hendelse.yml
@@ -30,3 +30,6 @@ spec:
     - team: personoversikt
       application: modia-soknadsstatus-kafka-manager
       access: read
+    - team: k9saksbehandling
+      application: k9-los-api
+      access: write
