--- a/tjenestespesifikasjoner/pdl-api/src/main/resources/pdl/.graphqlconfig
+++ b/tjenestespesifikasjoner/pdl-api/src/main/resources/pdl/.graphqlconfig
@@ -1,6 +1,6 @@
 {
   "name": "pdl-api",
-  "schemaPath": "schema.graphql",
+  "schemaPath": "schema.graphqls",
   "extensions": {
     "endpoints": {
       "PDL GraphQL Endpoint": {
