--- a/.github/workflows/.topic.yaml
+++ b/.github/workflows/.topic.yaml
@@ -12,13 +12,15 @@ jobs:
     if: github.ref == 'refs/heads/dev'
     name: Deploy topic to dev-gcp
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Deploy henvendelse-oppdatering-melding topic
-        uses: nais/deploy/actions/deploy@master
+        uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
           RESOURCE: .nais/topics/${{ inputs.topic-file-name }}
           VARS: .github/kafka-pools/dev.json
@@ -27,13 +29,15 @@ jobs:
     if: github.ref == 'refs/heads/master'
     name: Deploy topic to prod-gcp
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Deploy henvendelse-oppdatering-melding topic
-        uses: nais/deploy/actions/deploy@master
+        uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
           RESOURCE: .nais/topics/${{ inputs.topic-file-name }}
           VARS: .github/kafka-pools/prod.json
