[OPP-1589] Send varsel til Slack om det kommer inn meldinger på søknadsstatus DLQ

--- a/apps/soknadsstatus-hendelse-transform/.nais/dev.yaml
+++ b/apps/soknadsstatus-hendelse-transform/.nais/dev.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     team: personoversikt
 spec:
+  envFrom:
+    - secret: modia-soknadstatus-slackhook
   image: {{image}}
   port: 8080
   team: personoversikt
