--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ mock_webserver_version=4.11.0
 caffeine_version=3.1.6
 guava_testlib_version=32.0.0-jre
 jaxb_version=4.0.0
+slack_client_version=1.7.1
