[KAIZEN-0] consume behandlinger fra sob

--- a/.nais/kafka-manager/manager-dev.yml
+++ b/.nais/kafka-manager/manager-dev.yml
@@ -80,6 +80,18 @@ spec:
               "location": "AIVEN",
               "keyDeserializerType": "STRING",
               "valueDeserializerType": "STRING"
+            },
+            {
+              "name": "personoversikt.modia-soknadsstatus-behandling-oppdatering",
+              "location": "AIVEN",
+              "keyDeserializerType": "STRING",
+              "valueDeserializerType": "STRING"
+            },
+            {
+              "name": "personoversikt.modia-soknadsstatus-behandling-oppdatering-dlq",
+              "location": "AIVEN",
+              "keyDeserializerType": "STRING",
+              "valueDeserializerType": "STRING"
             }
           ]
         }
