--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -81,8 +81,12 @@ spec:
       value: "modia-soknadsstatus-api-db"
     - name: KAFKA_SOURCE_TOPIC
       value: "personoversikt.modia-soknadsstatus-oppdatering"
+    - name: KAFKA_SOURCE_BEHANDLING_TOPIC
+      value: "personoversikt.modia-soknadsstatus-behandling-oppdatering"
     - name: KAFKA_DEAD_LETTER_QUEUE_TOPIC
       value: "personoversikt.modia-soknadsstatus-oppdatering-dlq"
+    - name: KAFKA_DEAD_LETTER_QUEUE_BEHANDLING_TOPIC
+      value: "personoversikt.modia-soknadsstatus-behandling-oppdatering-dlq"
     - name: KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS
       value: "60000"
     - name: KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME
