--- a/.github/workflows/modia-soknadsstatus-behandling-oppdatering-dlq.yaml
+++ b/.github/workflows/modia-soknadsstatus-behandling-oppdatering-dlq.yaml
@@ -11,5 +11,8 @@ jobs:
   build:
     uses: ./.github/workflows/.topic.yaml
     secrets: inherit
+    permissions:
+      contents: read
+      id-token: write
     with:
       topic-file-name: modia-soknadsstatus-behandling-oppdatering-dlq.yml
