[KAIZEN-0] Legg til manglende env variabler

--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -115,4 +115,7 @@ spec:
       value: "https://graph.microsoft.com/"
     - name: MS_GRAPH_SCOPE
       value: "https://graph.microsoft.com/.default"
-
+    - name: BEHANDLING_CONSUMER_POLL_DURATION_MS
+      value: "1000"
+    - name: BEHANDLING_CONSUMER_RESTART_DELAY_MS
+      value: "2000"
