--- a/.nais/kafka-manager/manager-dev.yml
+++ b/.nais/kafka-manager/manager-dev.yml
@@ -86,6 +86,12 @@ spec:
               "location": "AIVEN",
               "keyDeserializerType": "STRING",
               "valueDeserializerType": "STRING"
+            },
+            {
+              "name": "org.sobhist-v4",
+              "location": "AIVEN",
+              "keyDeserializerType": "STRING",
+              "valueDeserializerType": "STRING"
             }
           ]
         }
