--- a/apps/modia-soknadsstatus-api/.nais/prod.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/prod.yaml
@@ -71,6 +71,8 @@ spec:
         - host: skjermede-personer-pip.intern.nav.no
         - host: unleash.nais.io
         - host: norg2.prod-fss-pub.nais.io
+  envFrom:
+    - secret: modia-soknadstatus-slackhook
   env:
     - name: APP_NAME
       value: "modia-soknadsstatus-api"
