[KAIZEN-0] Lage jobb for å migrere aktor til Fnr

--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -38,6 +38,7 @@ spec:
     enabled: true
   kafka:
     pool: nav-dev
+  leaderElection: true
   gcp:
     sqlInstances:
       - type: POSTGRES_14
