--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -107,7 +107,7 @@ spec:
     - name: PDL_SCOPE
       value: "dev-fss:pdl:pdl-api"
     - name: PDL_API_URL_Q1
-      value: "https://pdl-api-q1.dev.intern.nav.no/graphql"
+      value: "https://pdl-api-q1.dev-fss-pub.nais.io/graphql"
     - name: PDL_SCOPE_Q1
       value: "dev-fss:pdl:pdl-api"
     - name: AXSYS_URL
