--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -43,6 +43,7 @@ spec:
     sqlInstances:
       - type: POSTGRES_14
         tier: db-custom-4-16384
+        diskSize: 40
         databases:
           - name: modia-soknadsstatus-api-db
   azure:
