[KAIZEN-0] Øke startup tid for lang migrasjon
Midlertidig øke startup threshold og period slik at vi kan kjøre
gjennom en lang migrasjon som bygger indekser.

--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -31,6 +31,10 @@ spec:
     path: /internal/isReady
     initialDelay: 20
     timeout: 1
+  startup:
+    path: /internal/isReady
+    failureThreshold: 30
+    periodSeconds: 10
   prometheus:
     enabled: true
     path: /internal/metrics
