--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -80,6 +80,7 @@ spec:
         - host: skjermede-personer-pip.intern.dev.nav.no
         - host: unleash.nais.io
         - host: norg2.dev-fss-pub.nais.io
+        - host: hooks.slack.com
   envFrom:
     - secret: modia-soknadstatus-slackhook
   env:
