--- a/apps/modia-soknadsstatus-api/.nais/prod.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/prod.yaml
@@ -38,6 +38,10 @@ spec:
     path: /internal/isReady
     initialDelay: 20
     timeout: 1
+  startup:
+    path: /internal/isReady
+    failureThreshold: 30
+    periodSeconds: 10
   prometheus:
     enabled: true
     path: /internal/metrics
