--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -116,6 +116,10 @@ spec:
       value: "https://pdl-api-q1.dev-fss-pub.nais.io/graphql"
     - name: PDL_SCOPE_Q1
       value: "dev-fss:pdl:pdl-api-q1"
+    - name: PDL_PIP_API_URL
+      value: "https://pdl-pip-api.dev.intern.nav.no"
+    - name: PDL_PIP_SCOPE
+      value: dev-fss:pdl:pdl-pip-api
     - name: AXSYS_URL
       value: "https://axsys.dev-fss-pub.nais.io"
     - name: AXSYS_SCOPE
