--- a/apps/modia-soknadsstatus-api/.nais/prod.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/prod.yaml
@@ -70,6 +70,9 @@ spec:
         - application: modiapersonoversikt-api
           cluster: prod-fss
           namespace: personoversikt
+        - application: modiapersonoversikt-api
+          cluster: prod-gcp
+          namespace: personoversikt
     outbound:
       external:
         - host: graph.microsoft.com
