Oppgrader ingress til norg2 etter flytting til gcp

--- a/apps/modia-soknadsstatus-api/.nais/prod.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/prod.yaml
@@ -81,8 +81,10 @@ spec:
         - host: axsys.prod-fss-pub.nais.io
         - host: skjermede-personer-pip.intern.nav.no
         - host: unleash.nais.io
-        - host: norg2.prod-fss-pub.nais.io
         - host: hooks.slack.com
+      rules:
+        - application: norg2
+          namespace: org
   envFrom:
     - secret: modia-soknadstatus-slackhook
   env:
@@ -109,7 +111,7 @@ spec:
     - name: HENDELSE_CONSUMER_RESTART_DELAY_MS
       value: "4000"
     - name: NORG2_URL
-      value: "https://norg2.prod-fss-pub.nais.io/norg2"
+      value: "http://norg2.org/norg2"
     - name: PDL_API_URL
       value: "https://pdl-api.prod-fss-pub.nais.io/graphql"
     - name: PDL_SCOPE
