--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -83,8 +83,10 @@ spec:
         - host: axsys.dev-fss-pub.nais.io
         - host: skjermede-personer-pip.intern.dev.nav.no
         - host: unleash.nais.io
-        - host: norg2.dev-fss-pub.nais.io
         - host: hooks.slack.com
+      rules:
+        - application: norg2
+          namespace: org
   envFrom:
     - secret: modia-soknadstatus-slackhook
   env:
@@ -111,7 +113,7 @@ spec:
     - name: HENDELSE_CONSUMER_RESTART_DELAY_MS
       value: "2000"
     - name: NORG2_URL
-      value: "https://norg2.dev-fss-pub.nais.io/norg2"
+      value: "http://norg2.org/norg2"
     - name: PDL_API_URL
       value: "https://pdl-api.dev-fss-pub.nais.io/graphql"
     - name: PDL_SCOPE
