--- a/apps/arena-infotrygd-soknadsstatus-transform/.nais/dev.yaml
+++ b/apps/arena-infotrygd-soknadsstatus-transform/.nais/dev.yaml
@@ -43,6 +43,7 @@ spec:
   gcp:
     sqlInstances:
       - type: POSTGRES_14
+        tier: db-f1-micro
         databases:
           - name: arena-infotrygd-soknadsstatus-db
   envFrom:
