--- a/apps/arena-infotrygd-soknadsstatus-transform/.nais/prod.yaml
+++ b/apps/arena-infotrygd-soknadsstatus-transform/.nais/prod.yaml
@@ -43,6 +43,7 @@ spec:
   gcp:
     sqlInstances:
       - type: POSTGRES_14
+        tier: db-custom-1-3840
         databases:
           - name: arena-infotrygd-soknadsstatus-db
   envFrom:
