--- a/apps/soknadsstatus-hendelse-transform/.nais/dev.yaml
+++ b/apps/soknadsstatus-hendelse-transform/.nais/dev.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     team: personoversikt
 spec:
-  image: {{image}}
+  image: "{{image}}"
   port: 8080
   replicas:
     min: 1
@@ -40,6 +40,7 @@ spec:
   gcp:
     sqlInstances:
       - type: POSTGRES_14
+        tier: db-f1-micro
         databases:
           - name: soknadsstatus-hendelse-transform-db
   envFrom:
