--- a/apps/soknadsstatus-hendelse-transform/.nais/prod.yaml
+++ b/apps/soknadsstatus-hendelse-transform/.nais/prod.yaml
@@ -14,11 +14,10 @@ spec:
     cpuThresholdPercentage: 90
   resources:
     requests:
-      cpu: 1000m
-      memory: 4096Mi
+      cpu: 20m
+      memory: 300Mi
     limits:
-      cpu: 2000m
-      memory: 8192Mi
+      memory: 4Gi
   liveness:
     path: /internal/isAlive
     initialDelay: 20
