--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -179,6 +179,8 @@ services:
       KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS: "10000"
       KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME: "modia_soknadsstatus_dlq_event_skip"
       KAFKA_DEAD_LETTER_QUEUE_METRICS_GAUGE_NAME: "modia_soknadsstatus_api_dlq_gauge"
+      HENDELSE_CONSUMER_POLL_DURATION_MS: 1000
+      HENDELSE_CONSUMER_RESTART_DELAY_MS: 2000
       DB_NAME: "modia-soknadsstatus"
       NAIS_DATABASE_MODIA_SOKNADSSTATUS_API_MODIA_SOKNADSSTATUS_HOST: "postgres-soknadsstatus-api"
       NAIS_DATABASE_MODIA_SOKNADSSTATUS_API_MODIA_SOKNADSSTATUS_PORT: "5432"
