Fiks flyway og jar konfigurasjon

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,20 @@
 kotlin.code.style=official
 
-kotlin_version=1.7.21
-ktor_version=2.0.3
-kotlinx_serialization_version=1.5.1
-kotlinx_datetime_version=0.4.0
-kotlinx_coroutines_version=1.7.0-RC
-logback_version=1.4.5
-logstash_version=7.4
-prometheus_version=1.8.5
+kotlin_version=2.0.21
+ktor_version=2.3.12
+kotlinx_serialization_version=1.7.3
+kotlinx_datetime_version=0.6.1
+kotlinx_coroutines_version=1.9.0
+logback_version=1.5.11
+logstash_version=8.0
+micrometer_version=1.13.6
 modia_common_version=1.2024.10.09-09.45-9d597a88d694
 ibm_mq_version=9.3.1.0
 active_mq_version=5.17.3
 kafka_version=3.3.1
 jms_api_version=2.0.1
-postgres_version=42.5.1
+postgres_version=42.7.4
+flyway_version=10.20.0
 junit_version=5.9.2
 test_containers_version=1.17.6
 graphql_version=6.4.0
