--- a/.github/workflows/mq-to-kafka.yaml
+++ b/.github/workflows/mq-to-kafka.yaml
@@ -8,6 +8,7 @@ on:
       - .github/workflows/mq-to-kafka.yaml
       - common/**
       - apps/mq-to-kafka/**
+      - gradle/**
 
 jobs:
   build:
