--- a/.github/workflows/.build.yaml
+++ b/.github/workflows/.build.yaml
@@ -15,24 +15,29 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Setup Java v21.x
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21.x
           cache: gradle
+
       - name: Setup ktlint
         uses: nbadal/action-ktlint-setup@v1
         with:
           ktlint_version: '1.0.0'
+
       - name: Ktlint
         run: bash ./linting.sh
+
       - name: Gradle test and build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./gradlew :apps:${{ github.workflow }}:build
+
       - name: Publish Docker image
-        if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         uses: nais/docker-build-push@v0
         id: docker-build-push
         with:
@@ -47,7 +52,7 @@ jobs:
   deploy-qa:
     name: Deploy to preprod
     needs: build
-    if: github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     environment: dev-gcp
     permissions:
