--- a/.github/workflows/.build.yaml
+++ b/.github/workflows/.build.yaml
@@ -2,6 +2,10 @@ name: ..build.yaml
 
 on: [workflow_call]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     name: Build & publish
