Øk startup prope initialDelay

--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -34,6 +34,7 @@ spec:
     timeout: 1
   startup:
     path: /internal/isReady
+    initialDelay: 20
     failureThreshold: 30
     periodSeconds: 10
   prometheus:
