enable team logs

--- a/apps/arena-infotrygd-soknadsstatus-transform/.nais/prod.yaml
+++ b/apps/arena-infotrygd-soknadsstatus-transform/.nais/prod.yaml
@@ -22,6 +22,9 @@ spec:
     outbound:
       external:
         - host: hooks.slack.com
+    rules:
+      - application: logging
+        namespace: nais-system
   liveness:
     path: /internal/isAlive
     initialDelay: 20
