--- a/apps/mq-to-kafka/.nais/dev.yaml
+++ b/apps/mq-to-kafka/.nais/dev.yaml
@@ -41,6 +41,9 @@ spec:
         - host: "mqls03.preprod.local"
           ports:
             - port: 1413
+      rules:
+        - application: logging
+          namespace: nais-system
   filesFrom:
     - secret: mq-tls-keystore
       mountPath: /var/run/keystore
