--- a/apps/modia-soknadsstatus-api/.nais/prod.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/prod.yaml
@@ -79,6 +79,7 @@ spec:
         - host: graph.microsoft.com
         - host: pdl-api.prod-fss-pub.nais.io
         - host: pdl-pip-api.prod-fss-pub.nais.io
+        - host: axsys.prod-fss-pub.nais.io
         - host: skjermede-personer-pip.intern.nav.no
         - host: unleash.nais.io
         - host: hooks.slack.com
@@ -126,6 +127,10 @@ spec:
       value: "https://pdl-pip-api.prod-fss-pub.nais.io"
     - name: PDL_PIP_SCOPE
       value: prod-fss:pdl:pdl-pip-api
+    - name: AXSYS_URL
+      value: "https://axsys.prod-fss-pub.nais.io"
+    - name: AXSYS_SCOPE
+      value: "prod-fss:org:axsys"
     - name: SKJERMEDE_PERSONER_PIP_URL
       value: "https://skjermede-personer-pip.intern.nav.no"
     - name: SKJERMEDE_PERSONER_SCOPE
