[TPO-142] erstatt axsys med entra id

--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -82,7 +82,6 @@ spec:
         - host: pdl-api.dev-fss-pub.nais.io
         - host: pdl-pip-api.dev-fss-pub.nais.io
         - host: pdl-api-q1.dev-fss-pub.nais.io
-        - host: axsys.dev-fss-pub.nais.io
         - host: skjermede-personer-pip.intern.dev.nav.no
         - host: unleash.nais.io
         - host: hooks.slack.com
@@ -130,15 +129,11 @@ spec:
       value: "https://pdl-pip-api.dev-fss-pub.nais.io"
     - name: PDL_PIP_SCOPE
       value: dev-fss:pdl:pdl-pip-api
-    - name: AXSYS_URL
-      value: "https://axsys.dev-fss-pub.nais.io"
-    - name: AXSYS_SCOPE
-      value: "dev-fss:org:axsys"
     - name: SKJERMEDE_PERSONER_PIP_URL
       value: "https://skjermede-personer-pip.intern.dev.nav.no"
     - name: SKJERMEDE_PERSONER_SCOPE
       value: "dev-gcp:nom:skjermede-personer-pip"
     - name: MS_GRAPH_URL
-      value: "https://graph.microsoft.com/"
+      value: "https://graph.microsoft.com/v1.0"
     - name: MS_GRAPH_SCOPE
       value: "https://graph.microsoft.com/.default"
