--- a/apps/modia-soknadsstatus-api/.nais/prod.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/prod.yaml
@@ -79,7 +79,6 @@ spec:
         - host: graph.microsoft.com
         - host: pdl-api.prod-fss-pub.nais.io
         - host: pdl-pip-api.prod-fss-pub.nais.io
-        - host: axsys.prod-fss-pub.nais.io
         - host: skjermede-personer-pip.intern.nav.no
         - host: unleash.nais.io
         - host: hooks.slack.com
@@ -127,15 +126,11 @@ spec:
       value: "https://pdl-pip-api.prod-fss-pub.nais.io"
     - name: PDL_PIP_SCOPE
       value: prod-fss:pdl:pdl-pip-api
-    - name: AXSYS_URL
-      value: "https://axsys.prod-fss-pub.nais.io"
-    - name: AXSYS_SCOPE
-      value: "prod-fss:org:axsys"
     - name: SKJERMEDE_PERSONER_PIP_URL
       value: "https://skjermede-personer-pip.intern.nav.no"
     - name: SKJERMEDE_PERSONER_SCOPE
       value: "prod-gcp:nom:skjermede-personer-pip"
     - name: MS_GRAPH_URL
-      value: "https://graph.microsoft.com/"
+      value: "https://graph.microsoft.com/v1.0"
     - name: MS_GRAPH_SCOPE
       value: "https://graph.microsoft.com/.default"
